<resources>
    <string name="app_name">jankenpon</string>
    <string name="play">JOUER</string>
    <string name="results">RESULTATS</string>
    <string name="quit">QUITTER</string>
    <string name="loading_game">Préparation du terrain</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="scissors">scissors</string>
    <string name="rock">rock</string>
    <string name="paper">paper</string>
    <string name="app_id">1022518167538</string>
</resources>