<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/scissors"
            android:src="@drawable/scissors"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/paper"
            android:src="@drawable/paper"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="145dp"
            android:layout_height="147dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/rock"
            android:src="@drawable/rock" />

        </LinearLayout>

</LinearLayout>


